# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2018-06-02 mmichaud <m.michael.michaud@orange.fr>
  * upgrade dxf-driver to 0.9.0 (could not export MultiPolygon)

2018-06-01 mmichaud <m.michael.michaud@orange.fr>
  * make target layer of EraseLayerAWithLayerBPlugIn updatable. Improve 18N.

2018-05-31 mmichaud <m.michael.michaud@orange.fr>
  * make EraseLayerAWithLayerBPlugIn more robust

2018-05-27 mmichaud <m.michael.michaud@orange.fr>
  * small improvements in SkeletonPlugIn (PLUS version, GraphToolBox)

2018-05-21 mmichaud <m.michael.michaud@orange.fr>
  * bugfix: handling date/time fields of JML datasets was still broken (empty
    strings was returned as String instead of null)

2018-05-12 ede
  * bugfix #475: log messages doubled in the console

* release 1.13 *****************************************************************

2018-05-11 mmichaud <m.michael.michaud@orange.fr>
  * Fix #474 and improve date editing in AttributePanel : now, customized date
    format is used at the first place for date editing

2018-04-27 mmichaud <m.michael.michaud@orange.fr>
  * Add a new PlugIn called AddNewLayerViewPlugIn in the Layer context menu
    It creates a Layer which is just a view on another layer data.
    Useful to add symbols/labels on an existing layer without duplicating data

2018-04-18 mmichaud <m.michael.michaud@orange.fr>
  * improve WritableDataStoreLayer wizard (user interaction)

2018-04-15 ede
  * bugfix "[JPP-Devel] Open File does not show file type menu"
    activating the open file menu a second time resulted in an 
    empty file type selection dropdown field 

2018-04-12 mmichaud <m.michael.michaud@orange.fr>
  * Fix #473 : shapefile driver no more limited to 4G files
  * Fix #471 : small bug in PostGIS (new) driver UI