@@ -3,6 +3,9 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2018-06-03 mmichaud <m.michael.michaud@orange.fr>
+  * bugfix in Dissolve2 : could not use geometry attribute as key
+
 2018-06-02 mmichaud <m.michael.michaud@orange.fr>
   * upgrade dxf-driver to 0.9.0 (could not export MultiPolygon)
 
